[package]
name = "no-pico-args"
version = "0.5.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>", "Mikail Plotzky <mp@ypon.com>"]
edition = "2018"
keywords = ["args", "cli", "no_std"]
license = "MIT"
description = "`no_std` version of `pico_args` by RazrFalcon."
repository = "https://github.com/drafteddev/no-pico-args"
documentation = "https://docs.rs/no-pico-args/"
readme = "README.md"
exclude = ["test-apps/**"]

[features]
default = []
std = []
eq-separator = []
combined-flags = []
short-space-opt = []
